--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,4 +1,4 @@
-.form-card {
+/*.form-card {
   box-sizing: border-box;
   width: 50%;
   margin: 20px auto;
@@ -25,4 +25,4 @@ input, textarea {
 button {
   display: block;
   margin: 20px auto;
-}
+}*/
