--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -26,3 +26,12 @@ button {
   display: block;
   margin: 20px auto;
 }*/
+/*.form-container {
+  margin: 0 auto;
+  width: 800px;
+}*/
+
+#email, #password{
+  height: 50px;
+  font-size: larger;
+}
