--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,31 +1,63 @@
-<!--<div class="form-card">
-  <h2>Connexion</h2>
-  <div class="form-group">
-    <label for="email">Email</label>
-    <input type="text" id="email">
-  </div>
-  <div class="form-group">
-    <label for="password">Mot de passe</label>
-    <input type="password" id="password">
-  </div>
-  <div class="action-buttons">
-    <button (click)="onLogin()">Connexion</button>
-  </div>
-</div>-->
+<div class="title col-12 text-center bg-black text-white py-1 mb-5">
+<h3>Pay My Buddy</h3>
+</div>
+    <div class="form-container col-4 border border-dark rounded-2 py-5 m-auto">
+       <form (ngSubmit)="onLogin()" >
+         <div class="col-4 text-center text-white rounded bg-success py-1 m-auto">
+           <h4>Pay My Buddy</h4>
+         </div>
+         <div class="col-11 mx-auto mt-5 py-2">
+           <span>Mail: </span><input id="email"type="text" class="form-control" name="email" [(ngModel)]="username" placeholder="&#x2709; Entrer votre email."><br>
+         </div>
 
-<div class="login-container">
-  <div>
-     <div class="title">
-      Pay My Buddy
-    </div>
-    <div class="form-container">
-      <form (ngSubmit)="onLogin()">
-        <span>Mail: </span><input type="text" class="form-control" name="email" [(ngModel)]="username"><br>
-        <span>Password: </span><input type="password" class="form-control" name="password"
-                                      [(ngModel)]="password"><br>
-        <div class="text-center"><input type="submit" class="btn btn-primary" value="OK"></div>
+         <div class="col-11 m-auto py-2">
+           <span>Password: </span><input id="password" type="password" class="form-control" name="password " [(ngModel)]="password" placeholder="&#10033; Entrer votre mot de passe" ><br>
+         </div>
+
+         <div class="col-4 form-check m-auto pb-5">
+           <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+           <label class="form-check-label" for="defaultCheck1">
+             <h5>Remember me</h5>
+           </label>
+         </div>
+
+         <div class="text-center"><a routerLink="/registration" routerLinkActive="active">Créer un compte</a></div>
+
+         <div class="text-center m-auto p-5"><input type="submit" class="btn btn-primary btn-lg" [disabled]="!username || !password" value="   Login   "></div>
+
       </form>
     </div>
-    <div><a routerLink="/registration" routerLinkActive="active">Créer un compte</a></div>
-  </div>
+
+
+<!--div class="title col-12 text-center bg-black text-white py-1 mb-5">
+  <h3>Pay My Buddy</h3>
 </div>
+
+
+<div class="form-container col-4 border border-dark rounded py-5 m-auto">
+  <form [formGroup]= "loginForm">
+    <div class="col-4 text-center text-white rounded bg-success py-1 m-auto">
+      <h4>Pay My Buddy</h4>
+    </div>
+    <div class="form-group mx-auto mt-5 py-2 text-center">
+      <label for="username"></label>
+      <input class="col-11" id="username" type="text" formControlName="username" placeholder="&#x2709; Entrer votre email.">
+    </div>
+
+    <div class="form-group m-auto py-5 text-center">
+      <label for="password"></label>
+      <input class="col-11" id="password" type="password" placeholder="&#10033; Entrer votre mot de passe" formControlName="password">
+    </div>
+
+    <div class="col-4 form-check m-auto pb-5">
+       <label class="form-check-label" for="checkbox"><h5>Remember me</h5></label>
+      <input class="form-check-input" type="checkbox" value="" id="checkbox">
+    </div>
+
+    <div class="text-center"><a routerLink="/registration" routerLinkActive="active">Créer un compte</a></div>
+
+    <div class="text-center m-auto p-5"><input type="submit" (click)="onLogin()"  class="btn btn-primary btn-lg" value="   Login   "></div>
+
+  </form>
+</div>-->
+
