--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 <app-header></app-header>
 <!--<app-person-list></app-person-list>-->
 <body>
-<h2>Welcome {{currentUser.firstName}} {{currentUser.lastName}}</h2>
+<h2>Welcome {{currentUser.firstName}} {{currentUser.lastName}} {{currentUser.id}}</h2>
 <!--button (click)="onLogout()" class="btn btn-primary">Logout</button-->
 </body>
 <app-sendmoney></app-sendmoney>
