Add bank transfer feature.

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<body>
+<body #transfer>
 <h2>Welcome {{currentUser.firstName}} {{currentUser.lastName}}</h2>
 </body>
 <app-sendmoney></app-sendmoney>
