--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,11 +7,13 @@
            <h4>Pay My Buddy</h4>
          </div>
          <div class="col-11 mx-auto mt-5 py-2">
-           <span>Mail: </span><input id="email"type="text" class="form-control" name="email" [(ngModel)]="username" placeholder="&#x2709; Entrer votre email."><br>
+           <label>Mail: </label>
+           <input id="email"type="text" class="form-control" name="email" [(ngModel)]="username" placeholder="&#x2709; Entrer votre email."><br>
          </div>
 
          <div class="col-11 m-auto py-2">
-           <span>Password: </span><input id="password" type="password" class="form-control" name="password " [(ngModel)]="password" placeholder="&#10033; Entrer votre mot de passe" ><br>
+           <label>Mail: </label>
+           <input id="password" type="password" class="form-control" name="password " [(ngModel)]="password" placeholder="&#10033; Entrer votre mot de passe" ><br>
          </div>
 
          <div class="col-4 form-check m-auto pb-5">
