--- a/src/app/addconnection/addconnection.component.html
+++ b/src/app/addconnection/addconnection.component.html
@@ -3,15 +3,14 @@
 </div>
 <div class="add-connection container col-4">
   <div class="row">
-  <div class="col-8">
-    <label for="connection">Select a connexion</label><br>
-    <!--input class="" id="connection"  type="text"  formControlName="recipient"-->
-    <select id="connection"  type="text"  [formControl]=connection> <!--(change)="update($event)"-->
-      <option value="default">Default select</option>
-      <option *ngFor="let personModel of connections$ | async" [ngValue]=personModel.id>
-        <!--span [hidden]="true">{{personModel.personFullDtoId}}</span--> {{personModel.email}} </option>
-    </select>
-  </div>
+    <div class="col-8">
+      <label for="connection">Select a connexion</label><br>
+      <select id="connection" type="text" [formControl]=connection>
+        <option value="default">Default select</option>
+        <option *ngFor="let personModel of connections$ | async" [ngValue]=personModel.id>
+          {{personModel.email}} </option>
+      </select>
+    </div>
     <div class="col-4 pt-3">
       <button type="submit" (click)="onSubmit()" class="btn btn-primary">Add Connection</button>
     </div>
