--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
   <h2>Pay My Buddy</h2>
   </div>
   <div class="col-9 text-end">
-  <nav>
+  <nav id="topnav">
     <a id="home" routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a>
     <a routerLink="Transfer" routerLinkActive="active">Transfer</a>
     <a routerLink="Profile" routerLinkActive="active">Profile</a>
@@ -15,10 +15,9 @@
   </div>
   </header>
 
-<nav style="-bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
+<nav aria-label="breadcrumb">
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="#home">Home</a></li>
-    <li class="breadcrumb-item"><a href="#transfer">Transfer</a></li>
-    <li class="breadcrumb-item active" aria-current="page"></li>
+    <li class="breadcrumb-item active" aria-current="page">Transfer</li>
   </ol>
 </nav>
