--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,72 +1,40 @@
-<!--div class="registration-container">
-  <div>
-    <h1>M'inscrire</h1>
-    <div>
-      <form (ngSubmit)="onSubmitForm()">
-        <div>
-          <label>email</label>
-          <input name="email" type="text" [(ngModel)]="user.email" class="form-control">
-        </div>
-        <div>
-          <label>nom</label>
-          <input name="lastName" type="text" [(ngModel)]="user.lastName" class="form-control">
-        </div>
-        <div>
-          <label>prenom</label>
-          <input name="firstName" type="text" [(ngModel)]="user.firstName" class="form-control">
-        </div>
-        <div>
-          <label>password</label>
-          <input name="password" type="password" [(ngModel)]="user.password" class="form-control">
-        </div>
-        <div>
-          <label>iban</label>
-          <input name="iban" type="text" [(ngModel)]="user.iban" class="form-control">
-        </div>
-         <div class="container-valid text-center">
-          <input type="submit" value="Valider" class="btn btn-primary">
-        </div>
-      </form>
-    </div>
-    <div><a routerLink="" routerLinkActive="active">Retour</a></div>
-  </div>
-</div-->
-
 <div class="registration-container col-5 border border-dark rounded py-5 m-auto">
-       <form [formGroup]="registerForm" >
-        <div class="text-center">
-          <h1>Formulaire d'inscription</h1>
-        </div>
-        <div class="form-group col-11 mx-5 my-4">
-          <label for="email">email</label><br>
-          <input class="col-11 mx-auto" id="email"  type="text"  placeholder="&#x2709; Entrer votre email" formControlName="email">
-        </div>
-        <div class="form-group col-11 mx-5 my-4">
-          <label for="lastName">nom</label><br>
-          <input class="col-11" id="lastName"  type="text" placeholder="Entrer votre nom" formControlName="lastName">
-        </div>
-        <div class="form-group col-11 mx-5 my-4">
-          <label for="firstName">prenom</label><br>
-          <input class="col-11" id="firstName" type="text" placeholder="Entrer votre prenom" formControlName="firstName">
-        </div>
-        <div class="form-group col-11 mx-5 my-4">
-          <label for="password">password</label><br>
-          <input class="col-11" id= "password"  type="password"  placeholder="&#10033; Entrer un mot de passe" formControlName="password">
-        </div>
-        <div class="form-group col-11 mx-5 my-4">
-          <label for="confirmPassword">Confirm password</label><br>
-          <input class="col-11" id="confirmPassword"  type="password" placeholder="&#10033; Confirmer le mot de passe" formControlName="confirmPassword">
-        </div>
-        <div class="form-group col-11 mx-5 my-4">
-          <label for="iban">iban</label><br>
-          <input class="col-11" id="iban"  type="text" placeholder="Entrer votre IBAN" formControlName="iban">
-        </div>
-        <div class="text-center mt-5">
-          <button type="submit" (click)="onSubmitForm()" class="btn btn-primary" [disabled]="registerForm.invalid">Valider</button>
-        </div>
-         <div class="col-11 mx-5"><a routerLink="" routerLinkActive="active">Retour</a></div>
-      </form>
+  <form [formGroup]="registerForm">
+    <div class="text-center">
+      <h1>Formulaire d'inscription</h1>
     </div>
-
-
-
+    <div class="form-group col-11 mx-5 my-4">
+      <label for="email">Email</label><br>
+      <input class="col-11 mx-auto" id="email" type="text" placeholder="&#x2709; Entrer votre email"
+             formControlName="email">
+    </div>
+    <div class="form-group col-11 mx-5 my-4">
+      <label for="lastName">Last Name</label><br>
+      <input class="col-11" id="lastName" type="text" placeholder="Entrer votre nom" formControlName="lastName">
+    </div>
+    <div class="form-group col-11 mx-5 my-4">
+      <label for="firstName">First Name</label><br>
+      <input class="col-11" id="firstName" type="text" placeholder="Entrer votre prenom" formControlName="firstName">
+    </div>
+    <div class="form-group col-11 mx-5 my-4">
+      <label for="password">Password</label><br>
+      <input class="col-11" id="password" type="password" placeholder="&#10033; Entrer un mot de passe"
+             formControlName="password">
+    </div>
+    <div class="form-group col-11 mx-5 my-4">
+      <label for="confirmPassword"></label>Confirm password<br>
+      <input class="col-11" id="confirmPassword" type="password" placeholder="&#10033; Confirmer le mot de passe"
+             formControlName="confirmPassword">
+    </div>
+    <div class="form-group col-11 mx-5 my-4">
+      <label for="iban">IBAN</label><br>
+      <input class="col-11" id="iban" type="text" placeholder="Entrer votre IBAN" formControlName="iban">
+    </div>
+    <div class="text-center mt-5">
+      <button type="submit" (click)="onSubmitForm()" class="btn btn-primary" [disabled]="registerForm.invalid">
+        Valider
+      </button>
+    </div>
+    <div class="col-11 mx-5"><a routerLink="" routerLinkActive="active">Retour</a></div>
+  </form>
+</div>
