--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -19,8 +19,8 @@
     </div>
 
     <div class="col-4 form-check m-auto pb-5">
-      <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-      <label class="form-check-label" for="defaultCheck1">
+      <input class="form-check-input" type="checkbox" name="rememberme" id="remember-me">
+      <label class="form-check-label" for="remember-me">
         <h5>Remember me</h5>
       </label>
     </div>
