--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="row">
+<header class="row gx-2">
   <div class="col-2 text-center text-white rounded bg-success">
   <h2>Pay My Buddy</h2>
   </div>
@@ -15,7 +15,7 @@
   </div>
   </header>
 
-<nav aria-label="breadcrumb">
+<nav class="m-lg-2" aria-label="breadcrumb">
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="#home">Home</a></li>
     <li class="breadcrumb-item active" aria-current="page">Transfer</li>
