--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,12 @@
+<div class="title col-12 text-center bg-black text-white py-1">
+  <h3>Pay My Buddy</h3>
+</div>
 <header class="row gx-2">
   <div class="col-2 text-center text-white rounded bg-success">
   <h2>Pay My Buddy</h2>
   </div>
   <div class="col-9 text-end">
-  <nav id="topnav">
+  <nav aria-label="topnav" id="topnav">
     <a id="home" routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a>
     <a routerLink="Transfer" routerLinkActive="active">Transfer</a>
     <a routerLink="Profile" routerLinkActive="active">Profile</a>
