--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -6,6 +6,7 @@ header {
 }
 
 #topnav {
+  margin-top: 10px;
   a {
     margin: 0 20px;
     font-size: larger;
@@ -51,5 +52,3 @@ li.breadcrumb-item::before {
   color: blue;
 
 }
-
-
