--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -5,34 +5,77 @@
     </div>
     <div class="form-group col-11 mx-5 my-4">
       <label for="email">Email</label><br>
-      <input class="col-11 mx-auto" id="email" type="text" placeholder="&#x2709; Entrer votre email"
-             formControlName="email">
+      <input class="col-11" id="email" type="text" placeholder="&#x2709; Entrer votre email" formControlName="email">
+      <div class="alert-danger col-11"
+           *ngIf="registerForm.controls['email'].invalid && registerForm.controls['email'].touched">Email is
+        required
+      </div>
     </div>
-    <div class="form-group col-11 mx-5 my-4">
+    <div class="form-group  col-11 mx-5 my-4">
       <label for="lastName">Last Name</label><br>
       <input class="col-11" id="lastName" type="text" placeholder="Entrer votre nom" formControlName="lastName">
+      <div class="alert-danger col-11"
+           *ngIf="registerForm.controls['lastName'].hasError('required') && registerForm.controls['lastName'].touched">
+        Last Name is required
+      </div>
     </div>
-    <div class="form-group col-11 mx-5 my-4">
+    <div class="form-group  col-11 mx-5 my-4">
       <label for="firstName">First Name</label><br>
       <input class="col-11" id="firstName" type="text" placeholder="Entrer votre prenom" formControlName="firstName">
+      <div class="alert-danger col-11"
+           *ngIf="registerForm.controls['firstName'].hasError('required') && registerForm.controls['firstName'].touched">
+        First Name is required
+      </div>
     </div>
     <div class="form-group col-11 mx-5 my-4">
       <label for="password">Password</label><br>
       <input class="col-11" id="password" type="password" placeholder="&#10033; Entrer un mot de passe"
              formControlName="password">
+      <div class="alert-danger col-11"
+           *ngIf="registerForm.controls['password'].hasError('required') && registerForm.controls['password'].touched">
+        Password is required
+      </div>
+      <div class="alert-danger col-11"
+           *ngIf="registerForm.controls['password'].hasError('minlength') && registerForm.controls['password'].touched">
+        Password must be at least 8 characters
+      </div>
+      <div class="alert-danger col-11"
+           *ngIf="registerForm.controls['password'].hasError('maxlength') && registerForm.controls['password'].touched">
+        Password must be a maximum of 20 characters
+      </div>
+      <div class="alert-danger col-11"
+           *ngIf="registerForm.controls['password'].hasError('pattern') && registerForm.controls['password'].touched">
+        Password must contain an uppercase letter a
+        lowercase letter a number a special character and be at least 8 characters long
+      </div>
     </div>
     <div class="form-group col-11 mx-5 my-4">
       <label for="confirmPassword"></label>Confirm password<br>
       <input class="col-11" id="confirmPassword" type="password" placeholder="&#10033; Confirmer le mot de passe"
              formControlName="confirmPassword">
+      <div class="alert-danger col-11"
+           *ngIf="registerForm.controls['confirmPassword'].hasError('required') && registerForm.controls['confirmPassword'].touched">
+        Confirm Password is required
+      </div>
     </div>
     <div class="form-group col-11 mx-5 my-4">
       <label for="iban">IBAN</label><br>
       <input class="col-11" id="iban" type="text" placeholder="Entrer votre IBAN" formControlName="iban">
+      <div class="alert-danger col-11"
+           *ngIf="registerForm.controls['iban'].hasError('required') && registerForm.controls['iban'].touched">IBAN is
+        required
+      </div>
+      <div class="alert-danger col-11"
+           *ngIf="registerForm.controls['iban'].hasError('minlength') && registerForm.controls['iban'].touched">Password
+        must be at least 27 characters
+      </div>
+      <div class="alert-danger col-11"
+           *ngIf="registerForm.controls['iban'].hasError('maxlength') && registerForm.controls['iban'].touched">Password
+        must be a maximum of 34 characters
+      </div>
     </div>
     <div class="text-center mt-5">
-      <button type="submit" (click)="onSubmitForm()" class="btn btn-primary" [disabled]="registerForm.invalid">
-        Valider
+      <button type="submit" (click)="onSubmitForm()" class="btn btn-primary" [disabled]="registerForm.invalid">Valider
       </button>
     </div>
     <div class="col-11 mx-5"><a routerLink="" routerLinkActive="active">Retour</a></div>
