--- a/src/app/sendmoney/sendmoney.component.html
+++ b/src/app/sendmoney/sendmoney.component.html
@@ -3,18 +3,14 @@
     <div class="col-3 text-start ">
       <h2>Send Money</h2>
     </div>
-
     <div class="row pt-2">
-
       <div class="col-6">
         <h5>Amount Available</h5>
         <h4 class="offset-1 ">{{this.currentUser.amountAvailable}}</h4>
       </div>
-
       <div class="col-3 text-end">
         <button type="submit" (click)="onTransferBank()" class="btn btn-primary">Bank Transfer</button>
       </div>
-
       <div class="col-3 text-end">
         <button type="submit" (click)="onAddConnection()" class="btn btn-primary">Add Connection</button>
       </div>
@@ -28,25 +24,27 @@
             {{personModel.email}} </option>
         </select>
       </div>
-
       <div class="form-group col-3">
         <label class="offset-2" for="amount"></label>Amount<br>
         <input class="col-8 offset-2 text-center" id="amount" type="number" placeholder="Multiple de 10" step="10"
                min="0" max="1000" formControlName="amount">
       </div>
-
       <div class="form-group col-3">
         <label for="description">Description</label><br>
         <input class="col-12" id="description" type="text" formControlName="description">
       </div>
-
       <div class="form-group col-3 pt-3">
         <button type="submit" (click)="onPay()" class="btn btn-primary bg-success offset-1"
                 [disabled]="sendMoneyForm.invalid">Pay
         </button>
       </div>
+      <div *ngIf="alert==true" class="alert alert-success m-auto" role="alert">
+        Transaction completed successfully.
+      </div>
+      <div *ngIf="alert2==true" class="alert alert-danger m-auto" role="alert">
+        Transaction canceled you don't have enough money.
+      </div>
     </div>
-
   </form>
 </div>
 
