--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,11 +11,13 @@
       <input id="email" type="text" class="form-control" name="email" [(ngModel)]="username"
              placeholder="&#x2709; Entrer votre email."><br>
     </div>
-
     <div class="col-11 m-auto py-2">
-      <label>Mail: </label>
+      <label>Password: </label>
       <input id="password" type="password" class="form-control" name="password " [(ngModel)]="password"
              placeholder="&#10033; Entrer votre mot de passe"><br>
+    </div>
+    <div *ngIf="alert==true" class="alert alert-warning col-11 m-auto" role="alert">
+      Error, check your email and password !
     </div>
 
     <div class="col-4 form-check m-auto pb-5">
@@ -24,11 +26,9 @@
         <h5>Remember me</h5>
       </label>
     </div>
-
     <div class="text-center"><a routerLink="/registration" routerLinkActive="active">Créer un compte</a></div>
 
     <div class="text-center m-auto p-5"><input type="submit" class="btn btn-primary btn-lg"
                                                [disabled]="!username || !password" value="   Login   "></div>
-
   </form>
 </div>
