Minor typo fix.

--- a/src/app/addconnection/addconnection.component.html
+++ b/src/app/addconnection/addconnection.component.html
@@ -18,6 +18,6 @@
       Connection successfully added !
     </div>
   </div>
-  <div class=""><a routerLink="" routerLinkActive="active">Retour</a></div>
+  <div class=""><a routerLink="" routerLinkActive="active">Back</a></div>
 </div>
 
