--- a/src/app/banktransfer/banktransfer.component.html
+++ b/src/app/banktransfer/banktransfer.component.html
@@ -56,6 +56,6 @@
       Transfer success !
     </div>
   </div>
-  <div><a routerLink="" routerLinkActive="active">Retour</a></div>
+  <div><a routerLink="" routerLinkActive="active">Back</a></div>
 </div>
 
